Ajout Liens Films/Séries dans la page profil. Avancée de la page player.

--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -1,5 +1,10 @@
       <section class="sidebar">
 
+        <div class="menu-navigation-profil">
+            <a class="" href="#/films">FILMS</a>
+            <a class="" href="#/series">SÉRIES</a>
+        </div>
+
         <div class="user-pic"></div>
 
         <h3 class="user-name-profil">{{user}}</h3>
