--- a/src/movies/views/player.html
+++ b/src/movies/views/player.html
@@ -61,4 +61,10 @@
    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
   </video>
 
+  <div class="slider">
+
+
+
+  </div>
+
 </section>
