hr class renommes - pages profil - page player

--- a/src/movies/views/player.html
+++ b/src/movies/views/player.html
@@ -8,6 +8,15 @@
 
 </head>
 
+<script>
+
+$(document).ready(function(){
+  infinite: true,
+  slidesToShow: 3,
+  slidesToScroll: 3
+});
+
+</script>
 
 <!-- Début menu à gauche qui slide -->
 <nav class="cbp-spmenu cbp-spmenu-vertical" id="cbp-spmenu-s1">
@@ -63,7 +72,15 @@
 
   <div class="slider">
 
+    <div class="wrapper-slider">
 
+        <div class="your-class">
+          <div class="thumb-similar">your content</div>
+          <div class="thumb-similar">your content</div>
+          <div class="thumb-similar">your content</div>
+        </div>
+
+    </div>
 
   </div>
 
