--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -9,7 +9,7 @@
 
         <h3 class="user-name-profil">{{user}}</h3>
 
-        <hr></hr>
+        <hr class="sub-profil-bio"></hr>
 
         <p class="user-bio">This is my bio. This is my bio.This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. </p>
 
@@ -30,7 +30,7 @@
 				<h1 class="title-details">Films</h1>
 				<a href="#"><h1 class="tab-top-flop">Séries <img src="images/arrow-right.svg" width="15px"></h1></a>
 
-				<hr class="subtitle"></hr>
+				<hr class="sub-line-profil"></hr>
 
 				<div class="top">
 
