--- a/src/movies/views/movie.html
+++ b/src/movies/views/movie.html
@@ -35,7 +35,7 @@
             <div class="gradient"></div>
 
             <div class="backdropImg" ng-if="movie.backdrop_path!=null" style="background-image:url(http://image.tmdb.org/t/p/w1280{{movie.backdrop_path}})"></div>
-            <div class="backdropImg" ng-if="movie.backdrop_path!=null" style="background-image:url(http://www.hdwallpapers.in/walls/fantasy_space-wide.jpg)"></div>
+            <div class="backdropImg" ng-if="movie.backdrop_path==null" style="background-image:url(http://www.hdwallpapers.in/walls/fantasy_space-wide.jpg)"></div>
 
         </div>
 
