--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -1,73 +1,29 @@
-      <section class="sidebar">
+<nav class="cbp-spmenu cbp-spmenu-vertical" id="cbp-spmenu-s1">
+		<img src="images/logo-netmedia-ok.png" class="logo-accueil"/>
+		<div class="menu-navigation">
+			<div class="user-pic"></div>
 
-        <div class="menu-navigation-profil">
-            <a class="" href="#/films">FILMS</a>
-            <a class="" href="#/series">SÉRIES</a>
-        </div>
+			<h3 class="user-name-profil">{{user}}</h3>
+				<a class="selected" href="#/films" style="color:#000">FILMS</a>
+				<a class="" href="#/series">SÉRIES</a>
+		</div>
 
-        <div class="user-pic"></div>
-
-        <h3 class="user-name-profil">{{user.name}}</h3><br>
-       
-        <h3 class="user-name-profil">{{user.email}}</h3><br>
-        <h3 class="user-name-profil">{{user.bithday}}</h3><br>
-        <h3 class="user-name-profil">{{user.gender}}</h3><br>
-
-        <hr />
-
-        <p class="user-bio">This is my bio. This is my bio.This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. This is my bio. </p>
-
-        <div class="social-content">
-
-          <div class="social-icon"><img src="images/facebook44.svg" width="30px"></div>
-          <div class="social-icon"><img src="images/twitter.svg" width="30px"></div>
-          <div class="social-icon"><img src="images/google-plus.svg" width="30px"></div>
-          <div class="social-icon"><img src="images/facebook44.svg" width="30px"></div>
-
-        </div>
-
-      </section>
+		</div>
+</nav>
 
 			<section class="content">
 
 
-				<h1 class="title-details">Films</h1>
-				<a href="#"><h1 class="tab-top-flop">Séries <img src="images/arrow-right.svg" width="15px"></h1></a>
 
-				<hr class="subtitle"></hr>
-				<div class="profilContainerTopFlop">
-				<div class="top">
+				<div class="favorisFilm">
 
-					<div class="picto-top"><img src="images/top.png" width="30px"></div><h2 class="myTop-Flop">Mon Top<h2>
-
-						<div class="thumb"></div>
-						<div class="thumb"></div>
-						<div class="thumb"></div>
-						<div class="thumb"></div>
-						<div class="thumb"></div>
-
-
-				</div>
-
-				<div class="flop">
-
-					<div class="picto-top"><img src="images/flop.png" width="40px"></div><h2 class="myTop-Flop">Mon Flop<h2>
-
-						<div class="thumb"></div>
-						<div class="thumb"></div>
-						<div class="thumb"></div>
-						<div class="thumb"></div>
-						<div class="thumb"></div>
-
-
-				</div>
-			</div>
-				<div class="favoris">
-
-					<div class="picto-top"><img src="images/flop.png" width="40px"></div><h2 class="myTop-Flop">Favoris</h2>
+					<h2 class="myTop-Flop">Films Favoris</h2>
 
 						<div class="content-favoris">
 
+							<div class="thumb-fav"></div>
+							<div class="thumb-fav"></div>
+							<div class="thumb-fav"></div>
 							<div class="thumb-fav"></div>
 							<div class="thumb-fav"></div>
 							<div class="thumb-fav"></div>
@@ -80,3 +36,29 @@
 				</div>
 
 			</section>
+
+						<section class="content">
+
+
+
+							<div class="favorisSerie">
+
+								<h2 class="myTop-Flop">Séries favorites</h2>
+
+									<div class="content-favoris">
+
+										<div class="thumb-fav"></div>
+										<div class="thumb-fav"></div>
+										<div class="thumb-fav"></div>
+										<div class="thumb-fav"></div>
+										<div class="thumb-fav"></div>
+										<div class="thumb-fav"></div>
+										<div class="thumb-fav"></div>
+										<div class="thumb-fav"></div>
+										<div class="thumb-fav"></div>
+
+									</div>
+
+							</div>
+
+						</section>
